fix alignment

--- a/my-app/src/Home.css
+++ b/my-app/src/Home.css
@@ -53,7 +53,7 @@ a:hover {
     /* background-color: linear-gradient(to var(--darkBlue), var(--lightBlue)); */
 }
 
-.title {
+.intro {
     text-align: center;
     padding: 8px 0px;
 }
